Fix Insure Chill hit badge flicker.

--- a/insure-chill/static/css/game.css
+++ b/insure-chill/static/css/game.css
@@ -929,6 +929,10 @@ body {
   transform: translate(-50%, -50%) scale(1);
 }
 
+.hit-flash.is-resetting {
+  transition: none;
+}
+
 .debug-layer {
   position: absolute;
   inset: 0;
